--- a/Makefile.toml
+++ b/Makefile.toml
@@ -31,3 +31,37 @@ dependencies = [
     'test_alloc-nightly',
     'test_std-nightly',
 ]
+
+[tasks.check_no_std]
+command = 'cargo'
+args = ['clippy', '--no-default-features']
+
+[tasks.check_alloc]
+command = 'cargo'
+args = ['clippy', '--no-default-features', '--features', 'alloc']
+
+[tasks.check_std]
+command = 'cargo'
+args = ['clippy', '--no-default-features', '--features', 'std']
+
+[tasks.check_no_std-nightly]
+command = 'cargo'
+args = ['clippy', '--no-default-features', '--features', 'nightly']
+
+[tasks.check_alloc-nightly]
+command = 'cargo'
+args = ['clippy', '--no-default-features', '--features', 'alloc,nightly']
+
+[tasks.check_std-nightly]
+command = 'cargo'
+args = ['clippy', '--no-default-features', '--features', 'std,nightly']
+
+[tasks.check_all]
+dependencies = [
+    'check_no_std-nightly',
+    'check_alloc-nightly',
+    'check_std-nightly',
+    'check_no_std',
+    'check_alloc',
+    'check_std',
+]
