--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,29 +1,34 @@
 [tasks.test_no_std]
 command = 'cargo'
-args = ['test', '--no-default-features']
+args = ['test', '--lib', '--tests', '--no-default-features']
 
 [tasks.test_alloc]
 command = 'cargo'
-args = ['test', '--no-default-features', '--features', 'alloc']
+args = ['test', '--lib', '--tests', '--no-default-features', '--features', 'alloc']
 
 [tasks.test_std]
 command = 'cargo'
-args = ['test', '--no-default-features', '--features', 'std']
+args = ['test', '--lib', '--tests', '--no-default-features', '--features', 'std']
 
 [tasks.test_no_std-nightly]
 command = 'cargo'
-args = ['test', '--no-default-features', '--features', 'nightly']
+args = ['test', '--lib', '--tests', '--no-default-features', '--features', 'nightly']
 
 [tasks.test_alloc-nightly]
 command = 'cargo'
-args = ['test', '--no-default-features', '--features', 'alloc,nightly']
+args = ['test', '--lib', '--tests', '--no-default-features', '--features', 'alloc,nightly']
 
 [tasks.test_std-nightly]
 command = 'cargo'
-args = ['test', '--no-default-features', '--features', 'std,nightly']
+args = ['test', '--lib', '--tests', '--no-default-features', '--features', 'std,nightly']
+
+[tasks.test_doc]
+command = 'cargo'
+args = ['test', '--doc', '--all-features']
 
 [tasks.test_all]
 dependencies = [
+    'test_doc',
     'test_no_std',
     'test_alloc',
     'test_std',
